[gd_scene load_steps=16 format=2]

[ext_resource path="res://Sprites/mama_scorpio.png" type="Texture" id=1]
[ext_resource path="res://MamaScorp.gd" type="Script" id=2]

[sub_resource type="Shader" id=59]
code = "shader_type canvas_item;

uniform bool active = true;
uniform float luminance_threshold = 0.4;
uniform vec4 color : hint_color = vec4(1.0, 1.0, 1.0, 1.0); // Tint color

uniform float alpha_threshold = 0.01;  // Minimum alpha value to consider

void fragment() {
    vec4 previous_color = texture(TEXTURE, UV);
    vec4 new_color = previous_color;

    // Only modify the color if the pixel is not fully transparent and the shader is active
    if (active && previous_color.a > alpha_threshold) {
        float luminance = 0.299 * previous_color.r + 0.587 * previous_color.g + 0.114 * previous_color.b;

        // Apply the color if the luminance is above the threshold
        if (luminance > luminance_threshold) {
            new_color.rgb = color.rgb;
            new_color.a = previous_color.a * color.a; // Apply the alpha from the color uniform
        }
    }

    COLOR = new_color;
}
"

[sub_resource type="ShaderMaterial" id=60]
resource_local_to_scene = true
shader = SubResource( 59 )
shader_param/active = false
shader_param/luminance_threshold = 0.45
shader_param/color = Color( 0.329412, 0.733333, 0.533333, 1 )
shader_param/alpha_threshold = 0.01

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ SubResource( 7 ), SubResource( 8 ) ],
"loop": false,
"name": "Throw",
"speed": 5.0
}, {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ) ],
"loop": true,
"name": "Walk",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 24, 20 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 63, 33.5 )

[sub_resource type="Animation" id=61]
resource_name = "Hurt"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ false, true, false, true, false, true, false ]
}

[sub_resource type="Animation" id=62]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="CircleShape2D" id=63]
radius = 28.0

[node name="MamaScorp" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
material = SubResource( 60 )
frames = SubResource( 4 )
animation = "Throw"
frame = 1
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 3, 5 )
shape = SubResource( 5 )

[node name="ThrowPosition" type="Position2D" parent="."]
position = Vector2( -17, 6 )

[node name="ThrowTimer" type="Timer" parent="."]
wait_time = 3.5

[node name="TurnArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="TurnArea"]
position = Vector2( 71, -8.5 )
shape = SubResource( 6 )

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
process_parent = true
physics_process_parent = true

[node name="AnimationTimer" type="Timer" parent="."]
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Hurt = SubResource( 61 )
anims/RESET = SubResource( 62 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 63 )

[connection signal="timeout" from="ThrowTimer" to="." method="_on_ThrowTimer_timeout"]
[connection signal="body_entered" from="TurnArea" to="." method="_on_TurnArea_body_entered"]
[connection signal="screen_entered" from="VisibilityEnabler2D" to="." method="_on_VisibilityEnabler2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityEnabler2D" to="." method="_on_VisibilityEnabler2D_screen_exited"]
[connection signal="timeout" from="AnimationTimer" to="." method="_on_AnimationTimer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
